@@ -2,17 +2,17 @@ package redxax.oxy.common.mixin;
 
 import net.minecraft.client.MinecraftClient;
 import net.minecraft.client.gui.DrawContext;
-import net.minecraft.client.gui.screen.GameMenuScreen;
 import net.minecraft.client.gui.screen.Screen;
+import net.minecraft.client.gui.screen.TitleScreen;
 import net.minecraft.client.gui.widget.ButtonWidget;
 import net.minecraft.client.resource.language.I18n;
 import net.minecraft.text.Text;
-import org.lwjgl.glfw.GLFW;
 import org.spongepowered.asm.mixin.Mixin;
 import org.spongepowered.asm.mixin.Unique;
 import org.spongepowered.asm.mixin.injection.At;
 import org.spongepowered.asm.mixin.injection.Inject;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
+import org.spongepowered.asm.mixin.injection.callback.CallbackInfoReturnable;
 import redxax.oxy.common.NormalButton;
 import redxax.oxy.common.RemotelyClient;
 import redxax.oxy.common.Style1Button;
@@ -25,29 +25,37 @@ import java.awt.image.BufferedImage;
 import java.util.ArrayList;
 import java.util.List;
 
-import static redxax.oxy.common.Render.drawCustomButton;
 import static redxax.oxy.common.Render.drawSquareButton;
 import static redxax.oxy.common.config.Config.*;
 import static redxax.oxy.common.util.DevUtil.devPrint;
 import static redxax.oxy.common.util.ImageUtil.loadResourceIcon;
 
-@Mixin(GameMenuScreen.class)
-public abstract class GameMenuScreenMixin extends Screen {
-    @Unique private ButtonWidget optionsButton;
-    @Unique private BufferedImage remotelyIcon, fileExplorerIcon, terminalIcon, browserIcon;
-    @Unique private final List<Style1Button> style1Buttons = new ArrayList<>();
-    @Unique private final List<NormalButton> normalButtons = new ArrayList<>();
-    @Unique private boolean wasMousePressed = false;
+@Mixin(TitleScreen.class)
+public abstract class TitleScreenMixin extends Screen {
+    private ButtonWidget optionsButton;
+    private BufferedImage remotelyIcon;
+    private BufferedImage fileExplorerIcon;
+    private BufferedImage terminalIcon;
+    private BufferedImage browserIcon;
+    @Unique
+    private final List<Style1Button> style1Buttons = new ArrayList<>();
+    @Unique
+    private final List<NormalButton> normalButtons = new ArrayList<>();
 
-    protected GameMenuScreenMixin(Text title) {
+    protected TitleScreenMixin(Text title) {
         super(title);
     }
 
     @Inject(method = "init", at = @At("RETURN"))
     private void addServerManagerButton(CallbackInfo ci) {
-        String returnToMenuButtonText = I18n.translate("menu.returnToMenu");
-        String disconnectButtonText = I18n.translate("menu.disconnect");
-        optionsButton = this.children().stream().filter(child -> child instanceof ButtonWidget).map(child -> (ButtonWidget) child).filter(button -> button.getMessage().getString().equals(returnToMenuButtonText) || button.getMessage().getString().equals(disconnectButtonText)).findFirst().orElse(null);
+        String optionsButtonText = I18n.translate("menu.options");
+        optionsButton = this.children()
+                .stream()
+                .filter(child -> child instanceof ButtonWidget)
+                .map(child -> (ButtonWidget) child)
+                .filter(button -> button.getMessage().getString().equals(optionsButtonText))
+                .findFirst()
+                .orElse(null);
         if (optionsButton != null && mainMenuStyle.equals("Vanilla")) {
             int buttonX = optionsButton.getX();
             int buttonY = optionsButton.getY() + optionsButton.getHeight() + 5;
@@ -55,13 +63,21 @@ public abstract class GameMenuScreenMixin extends Screen {
             int largeButtonWidth = 100;
             int gap = 5;
             int totalWidth = smallButtonWidth * 2 + largeButtonWidth + gap * 2;
-            int excessWidth = totalWidth - 200;
-            largeButtonWidth -= excessWidth;
-            ButtonWidget serverButton = ButtonWidget.builder(Text.literal("Servers"), btn -> openServerManagerScreen()).dimensions(buttonX, buttonY, smallButtonWidth, 20).build();
+            if (totalWidth > 200) {
+                int excessWidth = totalWidth - 200;
+                largeButtonWidth -= excessWidth;
+            }
+            ButtonWidget serverButton = ButtonWidget.builder(Text.literal("Servers"), btn -> openServerManagerScreen())
+                    .dimensions(buttonX, buttonY, smallButtonWidth, 20)
+                    .build();
             this.addDrawableChild(serverButton);
-            ButtonWidget fileExplorerButton = ButtonWidget.builder(Text.literal("File Explorer"), btn -> openFileExplorerScreen()).dimensions(buttonX + smallButtonWidth + gap, buttonY, largeButtonWidth, 20).build();
+            ButtonWidget fileExplorerButton = ButtonWidget.builder(Text.literal("File Explorer"), btn -> openFileExplorerScreen())
+                    .dimensions(buttonX + smallButtonWidth + gap, buttonY, largeButtonWidth, 20)
+                    .build();
             this.addDrawableChild(fileExplorerButton);
-            ButtonWidget terminalButton = ButtonWidget.builder(Text.literal("Terminal"), btn -> openMultiTerminalScreen()).dimensions(buttonX + smallButtonWidth + largeButtonWidth + gap * 2, buttonY, smallButtonWidth, 20).build();
+            ButtonWidget terminalButton = ButtonWidget.builder(Text.literal("Terminal"), btn -> openMultiTerminalScreen())
+                    .dimensions(buttonX + smallButtonWidth + largeButtonWidth + gap * 2, buttonY, smallButtonWidth, 20)
+                    .build();
             this.addDrawableChild(terminalButton);
         }
         if (optionsButton != null && mainMenuStyle.equals("Minimal")) {
@@ -81,12 +97,16 @@ public abstract class GameMenuScreenMixin extends Screen {
         }
         if (optionsButton != null && mainMenuStyle.equals("Normal")) {
             normalButtons.clear();
+            int buttonX = optionsButton.getX();
+            int buttonY = optionsButton.getY() + optionsButton.getHeight() + 5;
             int smallButtonWidth = 50;
             int largeButtonWidth = 100;
             int gap = 5;
             int totalWidth = smallButtonWidth * 2 + largeButtonWidth + gap * 2;
-            int excessWidth = totalWidth - 200;
-            largeButtonWidth -= excessWidth;
+            if (totalWidth > 200) {
+                int excessWidth = totalWidth - 200;
+                largeButtonWidth -= excessWidth;
+            }
             normalButtons.add(new NormalButton("Servers", this::openServerManagerScreen, smallButtonWidth, 20));
             normalButtons.add(new NormalButton("File Explorer", this::openFileExplorerScreen, largeButtonWidth, 20));
             normalButtons.add(new NormalButton("Terminal", this::openMultiTerminalScreen, smallButtonWidth, 20));
@@ -95,11 +115,9 @@ public abstract class GameMenuScreenMixin extends Screen {
 
     @Inject(method = "render", at = @At("HEAD"))
     private void render(DrawContext context, int mouseX, int mouseY, float delta, CallbackInfo ci) {
-        context.getMatrices().push();
-        context.getMatrices().translate(0, 0, 499);
         if (mainMenuStyle.equals("Minimal") && optionsButton != null) {
             int spacing = 8;
-            int totalWidth = style1Buttons.size() * style1Buttons.getFirst().size + spacing * (style1Buttons.size() - 1);
+            int totalWidth = style1Buttons.size() * style1Buttons.get(0).size + spacing * (style1Buttons.size() - 1);
             int startX = ((this.width - totalWidth) / 2) - 51;
             int buttonY = optionsButton.getY() + optionsButton.getHeight() + 5;
             for (int i = 0; i < style1Buttons.size(); i++) {
@@ -107,7 +125,13 @@ public abstract class GameMenuScreenMixin extends Screen {
                 b.x = startX + i * (b.size + spacing);
                 b.y = buttonY;
                 boolean hovered = mouseX >= b.x && mouseX < b.x + b.size && mouseY >= b.y && mouseY < b.y + b.size;
-                drawSquareButton(context, b.x, b.y, this.client, hovered, mouseX, mouseY, b.label, switch (b.label) { case "Servers" -> remotelyIcon; case "File Explorer" -> fileExplorerIcon; case "Terminal" -> terminalIcon; case "Internet Browser" -> browserIcon; default -> null;});
+                drawSquareButton(context, b.x, b.y, this.client, hovered, mouseX, mouseY, b.label, switch (b.label) {
+                    case "Servers" -> remotelyIcon;
+                    case "File Explorer" -> fileExplorerIcon;
+                    case "Terminal" -> terminalIcon;
+                    case "Internet Browser" -> browserIcon;
+                    default -> null;
+                });
             }
         }
         if (mainMenuStyle.equals("Normal") && optionsButton != null) {
@@ -117,11 +141,13 @@ public abstract class GameMenuScreenMixin extends Screen {
             int largeButtonWidth = 100;
             int gap = 5;
             int totalWidth = smallButtonWidth * 2 + largeButtonWidth + gap * 2;
-            int excessWidth = totalWidth - 200;
-            largeButtonWidth -= excessWidth;
-            if (normalButtons.size() == 3) {
-                normalButtons.getFirst().x = buttonX;
-                normalButtons.getFirst().y = buttonY;
+            if (totalWidth > 200) {
+                int excessWidth = totalWidth - 200;
+                largeButtonWidth -= excessWidth;
+            }
+            if(normalButtons.size() == 3) {
+                normalButtons.get(0).x = buttonX;
+                normalButtons.get(0).y = buttonY;
                 normalButtons.get(0).width = smallButtonWidth;
                 normalButtons.get(0).height = 18;
                 normalButtons.get(1).x = buttonX + smallButtonWidth + gap;
@@ -135,34 +161,31 @@ public abstract class GameMenuScreenMixin extends Screen {
             }
             for (NormalButton btn : normalButtons) {
                 boolean hovered = mouseX >= btn.x && mouseX < btn.x + btn.width && mouseY >= btn.y && mouseY < btn.y + btn.height;
-                drawCustomButton(context, btn.x, btn.y, btn.label, this.client, hovered, false, true, false, true, btn.width, btn.height, globalTextColor, niceAccentHoverColor, mouseX, mouseY, "");
+                redxax.oxy.common.Render.drawCustomButton(context, btn.x, btn.y, btn.label, this.client, hovered, false, true, false, true, btn.width, btn.height, globalTextColor, niceAccentHoverColor, mouseX, mouseY, "");
             }
         }
-        context.getMatrices().pop();
-        checkMouseClicked(mouseX, mouseY);
     }
 
-    @Unique
-    private void checkMouseClicked(int mouseX, int mouseY) {
-        long windowHandle = this.client.getWindow().getHandle();
-        boolean currentlyPressed = GLFW.glfwGetMouseButton(windowHandle, GLFW.GLFW_MOUSE_BUTTON_LEFT) == GLFW.GLFW_PRESS;
-        if (currentlyPressed && !wasMousePressed) {
-            if (mainMenuStyle.equals("Minimal")) {
-                for (Style1Button b : style1Buttons) {
-                    if (mouseX >= b.x && mouseX < b.x + b.size && mouseY >= b.y && mouseY < b.y + b.size) {
-                        b.action.run();
-                    }
-                }
-            }
-            if (mainMenuStyle.equals("Normal")) {
-                for (NormalButton btn : normalButtons) {
-                    if (mouseX >= btn.x && mouseX < btn.x + btn.width && mouseY >= btn.y && mouseY < btn.y + btn.height) {
-                        btn.action.run();
-                    }
+    @Inject(method = "mouseClicked", at = @At("HEAD"), cancellable = true)
+    private void onMouseClicked(double d, double e, int i, CallbackInfoReturnable<Boolean> cir) {
+        if (mainMenuStyle.equals("Minimal")) {
+            for (Style1Button b : style1Buttons) {
+                if (d >= b.x && d < b.x + b.size && e >= b.y && e < b.y + b.size) {
+                    b.action.run();
+                    cir.cancel();
+                    return;
                 }
             }
         }
-        wasMousePressed = currentlyPressed;
+        if (mainMenuStyle.equals("Normal")) {
+            for (NormalButton btn : normalButtons) {
+                if (d >= btn.x && d < btn.x + btn.width && e >= btn.y && e < btn.y + btn.height) {
+                    btn.action.run();
+                    cir.cancel();
+                    return;
+                }
+            }
+        }
     }
 
     @Unique
